--- a/ecoursemobile/package.json
+++ b/ecoursemobile/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "axios": "^1.6.8",
     "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.1",
-    "expo-dev-client": "~3.3.11"
+    "react-native-safe-area-context": "^4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
